<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etShowNumber"
        android:layout_width="356dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:background="@color/gray"
        android:ems="10"
        android:gravity="right|bottom"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="0"
        android:textColor="#FBE9E7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,LabelFor,RtlHardcoded,TextFields" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="353dp"
        android:layout_height="194dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etShowNumber">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buAC"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ac"
                android:onClick="buCleanEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buPlusMinus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/PlusMinus"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buPer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Per"
                android:onClick="buPercentEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Div"
                android:onClick="buOpEvent"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bu8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bu9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buMul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x"
                android:onClick="buOpEvent"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bu5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bu6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Minus"
                android:onClick="buOpEvent"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                android:onClick="buNumberEvent"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/buSum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sum"
                android:onClick="buOpEvent"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="358dp"
        android:layout_height="62dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <Button
            android:id="@+id/bu0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="165dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buNumberEvent"
            android:text="@string/_0" />

        <Button
            android:id="@+id/buDot"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buNumberEvent"
            android:text="@string/Dot" />

        <Button
            android:id="@+id/buEq"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="buEqualEvent"
            android:text="@string/Eq" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="347dp"
        android:layout_height="91dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/CameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/CameraButton"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>
